testcrate/tests/ui/insert.stderr
error[E0308]: mismatched types
  --> $DIR/insert.rs:59:32
   |
59 |     sql!(Table.insert(field1 = 42, field2 = "", related_field = related_field, i32_field = 91, i32_fild = 91));
   |                                ^^ expected struct `std::string::String`, found integral variable
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0609]: no field `i32_fild` on type `Table`
  --> $DIR/insert.rs:59:96
   |
59 |     sql!(Table.insert(field1 = 42, field2 = "", related_field = related_field, i32_field = 91, i32_fild = 91));
   |                                                                                                ^^^^^^^^ did you mean `i32_field`?

error[E0308]: mismatched types
  --> $DIR/insert.rs:63:32
   |
63 |     sql!(Table.insert(field1 = 42, i32_field = 91, field2 = "test", related_field = related_field));
   |                                ^^ expected struct `std::string::String`, found integral variable
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/insert.rs:69:89
   |
69 |     sql!(Table.insert(field1 = "test", i32_field = 91, field2 = "test", related_field = 1));
   |                                                                                         ^ expected enum `std::option::Option`, found integral variable
   |
   = note: expected type `std::option::Option<RelatedTable>`
              found type `{integer}`

error: aborting due to 4 previous errors

